# Python

./: .env  .gitignore  Makefile  Pipfile  requirements.txt  todos.txt
1_Beginner_Project/Gambling/: gambling.py
1_Beginner_Project/password-generator/: password_gen.py
1_Beginner_Project/qr/: qr.py
1_Beginner_Project/string reverse/: string-reverse.py
1_Beginner_Project/to-do/: main.py  todos.txt
2_Intermediate_Project/app10_musiccrawler/: data.db  data.sqbpro  emailing.py  extract.yaml  main.py  practice.py  test.py
2_Intermediate_Project/app11_hotelbooking/: basic_requirement.txt  hotels.csv  main.py  main2.py
2_Intermediate_Project/app12_student_ms/: database.db  example.py  main.py  speed_calculator.py
2_Intermediate_Project/app13_chatbot/: backend.py  main.py
2_Intermediate_Project/app14_job_application/: Pipfile  app.py
2_Intermediate_Project/app15_django_application/: db.sqlite3
2_Intermediate_Project/app16_recommendation_system/: main.ipynb
2_Intermediate_Project/app2_website/: .main.py.swp  Pipfile  main.py  requirements.txt
2_Intermediate_Project/app3_pdf_generator/: main.py
Hangman/: hangman.py
Python-3.11.5/: Makefile  Makefile.pre  config.status  pyconfig.h
ordering-system /: ordering.py
rock-paper /: rock.py
side-project/gpt/gpt-api/: database.py  main.py  pyproject.toml
side-project/gpt/gpt-api/open_ai/: model.py  routes.py  service.py
test/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  numpy.ipynb  pyproject.toml
test/.ipynb_checkpoints/: numpy-checkpoint.ipynb
tutorial/: lession01.py  main.py
(+261 files in other folders)
