[tool.poetry]
name = "test-env"
version = "0.1.0"
description = ""
authors = ["dllchun <wingchuncheung0108@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.1.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
